--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -3,4 +3,53 @@
   display: flex;
   height: 100vh;
   justify-content: center;
+  background-color: gray;
+}
+
+.card-container {
+  border: 1px solid red;
+  margin-top: 10%;
+  width: 350px;
+  height: 450px;
+  display: flex;
+  flex-direction: column;
+}
+
+.headline-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 40px;
+}
+
+.headline-container h2 {
+  font-size: 20px;
+  text-transform: uppercase;
+  font-family: 'Roboto', sans-serif;
+  color: var(--headline-color);
+  font-weight: 500;
+}
+
+.image-container {
+  border: 1px solid yellow;
+  display: flex;
+  justify-content: center;
+}
+
+img {
+  border: 1px solid yellow;
+  width: 80%;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 8px;
+}
+
+.text-description-container {
+  border: 1px solid orchid;
+  height: 90px;
+  margin: 15px;
+  text-align: justify;
+  text-justify: inter-word;
+  font-size: 16px;
+  font-family: 'Roboto', sans-serif;
 }
