--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -3,11 +3,13 @@
   display: flex;
   height: 100vh;
   justify-content: center;
-  background-color: gray;
+  background-color: var(--headline-color);
 }
 
 .card-container {
-  border: 1px solid red;
+  border: 8px solid var(--highlight-color);
+  background-color: var(--background-color);
+  border-radius: 5px;
   margin-top: 10%;
   width: 350px;
   height: 450px;
@@ -31,25 +33,62 @@
 }
 
 .image-container {
-  border: 1px solid yellow;
   display: flex;
   justify-content: center;
 }
 
 img {
-  border: 1px solid yellow;
-  width: 80%;
+  border: 3px solid var(--highlight-color);
+  width: 90%;
   height: 200px;
   object-fit: cover;
-  border-radius: 8px;
+  border-radius: 10px;
 }
 
 .text-description-container {
-  border: 1px solid orchid;
+  border: 3px solid var(--highlight-color);
+  padding: 2px;
+  border-radius: 8px;
   height: 90px;
   margin: 15px;
   text-align: justify;
   text-justify: inter-word;
   font-size: 16px;
   font-family: 'Roboto', sans-serif;
+  color: var(--text-color);
+}
+
+.text-attr-container, .text-rare-container {
+  display: flex;
+  align-items: center;
+  margin: 0 15px;
+  justify-content: space-around;
+  border: 2px solid var(--highlight-color);
+  font-size: 16px;
+  font-family: 'Roboto', sans-serif;
+  color: var(--text-color);
+  border-radius: 6px;
+}
+
+.text-rare-container {
+  margin-top: 2px;
+}
+
+.text-trunfo-container {
+  display: flex;
+  height: 15px;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  font-family: 'Roboto', sans-serif;
+  background-color: var(--button-color);
+  color: var(--button-text);
+  margin-top: 5px;
+}
+
+.text-trunfo-container p {
+  color: var(--button-text);
+  text-transform: uppercase;
+  font-family: 'Roboto', sans-serif;
+  font-size: 12px;
 }
