--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,5 +1,5 @@
 .header-container {
-  background-color: var(--secondary-color);
+  background-color: var(--button-color);
   font-family: 'Roboto', sans-serif;
   display: flex;
   align-items: center;
@@ -8,7 +8,7 @@
 }
 
 .header-container h1 {
-  color: var(--headline-color);
+  color: var(--button-text);
   text-transform: uppercase;
 }
 
